--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
    "description": "Blog app",
    "main": "server.js",
    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
+      "test": "jest",
       "start": "nodemon server.js"
    },
    "repository": {
@@ -26,5 +26,8 @@
       "express-session": "^1.17.2",
       "mysql2": "^2.3.2",
       "sequelize": "^6.8.0"
+   },
+   "devDependencies": {
+      "jest": "^27.3.1"
    }
 }
