--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
       "connect-session-sequelize": "^7.1.2",
       "dotenv": "^10.0.0",
       "express": "^4.17.1",
+      "express-fileupload": "^1.2.1",
+      "express-formidable": "^1.2.0",
       "express-handlebars": "^5.3.4",
       "express-session": "^1.17.2",
       "mysql2": "^2.3.2",
